# AUSTIN-BLANK-APP

./: .gitignore  README.md  browser.html  config.json  index.html  package.json  requirements.txt  sample_sales_orders.csv  streamlit_app.py  tsconfig.json
.devcontainer/: devcontainer.json
.github/workflows/: build.yml
src/: App.tsx  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/analysis/: engine.ts
src/data/: sources.ts
