[package]
name = "dynasty-desktop"
version = "1.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-http = { version = "2" }

[features]
# This feature is used for production builds where assets are pre-bundled
custom-protocol = ["tauri/custom-protocol"]
